--- a/css/style.css
+++ b/css/style.css
@@ -1628,7 +1628,7 @@ h2>.q-mark {
   .footer-tel>.tel-number {
     font-size: .48rem;
     font-weight: 500;
-    font-family:'Lato',sans-serif;
+    /*font-family:'Lato',sans-serif;*/
   }
   .footer-tel>.tel-time {
     padding-top: 3vw;
