--- a/css/style.css
+++ b/css/style.css
@@ -48,14 +48,14 @@ a {
 /* scroll effect for image */
 .img-animation {
   /* animation: img-opacity 1s cubic-bezier(.4, 0, .2, 1); */
-  animation: img-opacity 500ms cubic-bezier(.23, 1, .32, 1);/* easeOutQuint */
+  animation: img-opacity 1s cubic-bezier(.23, 1, .32, 1);/* easeOutQuint */
   /*animation: img-opacity 1s ease-out;*/
   overflow: hidden;
   position: relative;
 }
 .img-animation:before {
   /* animation: img-animation 500ms cubic-bezier(.4, 0, .2, 1) forwards; */
-  animation: img-animation 500ms cubic-bezier(.23, 1, .32, 1)forwards;/* easeOutQuint */
+  animation: img-animation 1s cubic-bezier(.23, 1, .32, 1)forwards;/* easeOutQuint */
   /*animation: img-animation 1s ease-out forwards;*/
   background: #fff;
   bottom: 0;
