--- a/css/style.css
+++ b/css/style.css
@@ -1133,7 +1133,7 @@ h2>.q-mark {
 .greeting-text {
   font-size: .14rem;
   font-weight: 300;
-  letter-spacing: 0.05;
+  letter-spacing: 0.05rem;
   line-height: 0.36rem;
   color: #333;
   padding: 0 16.40625vw 6.25vw 16.40625vw;
@@ -2265,7 +2265,7 @@ h2>.q-mark {
   }
   .about:last-of-type>.subtitle {
     padding-top: 21.33vw;
-    padding-bottom: 17.066;
+    padding-bottom: 17.066vw;
   }
   .about>.subtitle>h2 {
     padding-right: 4.266vw;
