--- a/css/style.css
+++ b/css/style.css
@@ -1322,7 +1322,7 @@ h2>.q-mark {
   padding: 0 12.3vw;
 }
 .fee-item-01 {
-  margin-right: 8.75vw;
+  margin-right: auto;
 }
 .fee-item-03 {
   margin: 0 auto 0 0 ;
