--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ a {
   border-radius: 1.5em;
   text-align: center;
 }
-.experience-btn-pc:hover {
+.experience-btn:hover {
   background-color: #fff;
   border-color: #13469a;
   color: #13469a;
