--- a/css/style.css
+++ b/css/style.css
@@ -108,11 +108,12 @@ a {
   border-radius: 1.5em;
   text-align: center;
 }
-.experience-btn:hover {
+
+/*.experience-btn:hover {
   background-color: #fff;
   border-color: #13469a;
   color: #13469a;
-}
+}*/
 .experience-btn-text {
   position: absolute;
   width: 100%;
@@ -152,11 +153,11 @@ a {
   border-radius: 1.5em;
   text-align: center;
 }
-.tel-btn:hover {
+/*.tel-btn:hover {
   background-color: #fff;
   border-color: #a4c520;
   color: #a4c520;
-}
+}*/
 .tel-btn-inner {
   position: absolute;
   width: 100%;
@@ -231,9 +232,9 @@ a {
 .dropdwn_menu li:first-of-type a {
   padding-top: 20px;
 }
-li a:hover {
+/*li a:hover {
   color: #849fcd;
-}
+}*/
 
 
 .hamberger {
@@ -276,9 +277,9 @@ li a:hover {
 .facebook-icon {
   width: 2.578125vw;
 }
-.facebook-icon:hover{
+/*.facebook-icon:hover{
   transform:scale(1.1,1.1);
-}
+}*/
 .facebook-icon-sp {
   display: none;
 }
@@ -291,11 +292,11 @@ li a:hover {
   color: #fff;
   text-align: center;
 }
-.tel-box:hover {
+/*.tel-box:hover {
   background-color: #fff;
   border-color: #13469a;
   color: #13469a;
-}
+}*/
 .tel-btn-inner {
   position: absolute;
   width: 100%;
@@ -736,11 +737,11 @@ li a:hover {
   background-color: #a4c520;
   border: 1px solid #a4c520;
 }
-.home-notice-contact>.access-menubar>.menubar:hover {
+/*.home-notice-contact>.access-menubar>.menubar:hover {
   background-color: #fff;
   border-color: #a4c520;
   color: #a4c520;
-}
+}*/
 .access-menubar>.menubar:after {
   right: 3.125vw;
 }
@@ -792,11 +793,11 @@ li a:hover {
   padding: 1.5625vw 0 1.5625vw 2.5vw;
   position: relative;
 }
-.access-menubar>.menubar:hover {
+/*.access-menubar>.menubar:hover {
   background-color: #fff;
   border-color: #13469a;
   color: #13469a;
-}
+}*/
 
 .access-menubar>.menubar:after {
   position: absolute;
@@ -867,11 +868,11 @@ li a:hover {
   font-size: .24rem;
   padding: 3.1640625vw 0 3.1640625vw 2.5vw;
 }
-.access-inquiry>.inquiry-texts>.access-menubar>.menubar:hover {
+/*.access-inquiry>.inquiry-texts>.access-menubar>.menubar:hover {
   background-color: #fff;
   border-color: #a4c520;
   color: #a4c520;
-}
+}*/
 .access-inquiry>.inquiry-texts>.access-menubar>.menubar:after {
 	right: 1.5625vw;
 }
@@ -936,11 +937,11 @@ h2>.q-mark {
   padding: 1.5625vw 0 1.5625vw 2.5vw;
   position: relative;
 }
-.question-menubar>.menubar:hover {
+/*.question-menubar>.menubar:hover {
   background-color: #fff;
   border-color: #13469a;
   color: #13469a;
-}
+}*/
 .question-menubar>.menubar:first-of-type {
   margin-right: 4.6875vw;
 }
@@ -1027,11 +1028,11 @@ h2>.q-mark {
   border: 1px solid #13469a;
   padding: 3.1640625vw 0 3.1640625vw 3.125vw;
 }
-.access-inquiry.contact-inquiry>.inquiry-texts>.access-menubar>.menubar:hover {
+/*.access-inquiry.contact-inquiry>.inquiry-texts>.access-menubar>.menubar:hover {
   background-color: #fff;
   border-color: #13469a;
   color: #13469a;
-}
+}*/
 .access-inquiry.contact-inquiry>.inquiry-texts>.access-menubar>.menubar:after {
   right: 2.5vw;
 }
@@ -2866,5 +2867,66 @@ h2>.q-mark {
     padding-top: 1.6vw;
     padding-bottom: 3.7333vw;
     display: block;
+  }
+}
+/**********************/
+/***   for PC mode  ***/
+/**********************/
+@media screen and (min-width:751px) {
+  /* 111行目 */
+  .experience-btn:hover {
+    background-color: #fff;
+    border-color: #13469a;
+    color: #13469a;
+  }
+  /* 155行目 */
+  .tel-btn:hover {
+    background-color: #fff;
+    border-color: #a4c520;
+    color: #a4c520;
+  }
+  /* 234行目 */
+  li a:hover {
+    color: #849fcd;
+  }
+  /* 279行目 */
+  .facebook-icon:hover{
+    transform:scale(1.1,1.1);
+  }
+  /* 294行目 */
+  .tel-box:hover {
+    background-color: #fff;
+    border-color: #13469a;
+    color: #13469a;
+  }
+  /* 739行目 */
+  .home-notice-contact>.access-menubar>.menubar:hover {
+    background-color: #fff;
+    border-color: #a4c520;
+    color: #a4c520;
+  }
+  /* 795行目 */
+  .access-menubar>.menubar:hover {
+    background-color: #fff;
+    border-color: #13469a;
+    color: #13469a;
+  }
+  /* 870行目 */
+  .access-inquiry>.inquiry-texts>.access-menubar>.menubar:hover {
+    background-color: #fff;
+    border-color: #a4c520;
+    color: #a4c520;
+  }
+  /* 939行目 */
+  .question-menubar>.menubar:hover {
+    background-color: #fff;
+    border-color: #13469a;
+    color: #13469a;
+  }
+  /* 1030行目 */
+  .access-inquiry.contact-inquiry>.inquiry-texts>.access-menubar>.menubar:hover {
+    background-color: #fff;
+    border-color: #13469a;
+    color: #13469a;
   }
 }
